Fix(CSS): Fix abbr title position on small devices

--- a/style.css
+++ b/style.css
@@ -8396,7 +8396,7 @@ abbr[data-title] {
   }
   abbr[data-title]:hover:before, abbr[data-title]:focus:before,label:focus-within abbr[data-title]:before {
 	opacity: 1;
-	top: -460%;
+	top: -11rem;
 	transition:  opacity 1s;
   }
   abbr[data-title]:hover:after, abbr[data-title]:focus:after, h2:focus-within abbr[data-title]:after {
@@ -8480,7 +8480,7 @@ abbr[data-title] {
 	  }
 	  abbr[data-title]:hover:before, abbr[data-title]:focus:before,label:focus-within abbr[data-title]:before {
 		
-		top: -490%;
+		top: -11rem;
 		
 	  }
 	  abbr[data-title]:hover:after, abbr[data-title]:focus:after, label:focus-within abbr[data-title]:after {
